--- a/03 Homework-barnaby.ipynb
+++ b/03 Homework-barnaby.ipynb
@@ -425,8 +425,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo Wie geht es Dir\n"
+     ]
+    }
+   ],
    "source": [
     "print(string1, string2)"
    ]
@@ -440,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +465,7 @@
        " 'Luzern : 0.954903647679971 Prozent']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
